<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="text_search">Поиск</string>
    <string name="text_media_library">Медиатека</string>
    <string name="text_settings">Настройки</string>
    <string name="text_dark_mode">Темная тема</string>
    <string name="text_share">Поделиться приложением</string>
    <string name="text_write">Написать в поддержку</string>
    <string name="text_agreement">Пользовательское соглашение</string>
    <string name="text_no_results">Ничего не нашлось</string>
    <string name="text_server_error">Проблемы со связью\n\nЗагрузка не удалась.\nПроверьте подключение к интернету.</string>
    <string name="text_update">Обновить</string>
    <string name="you_looking_for">Вы искали</string>
    <string name="clear_the_history">Очистить историю</string>
    <string name="time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="loss_of_unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_now">Добавлено в плейлист</string>
    <string name="track_added_to_playlist_already">Трек уже добавлен в плейлист</string>
    <string name="word_one_track">трек</string>
    <string name="word_two_tracks">трека</string>
    <string name="word_many_tracks">треков</string>

    <string name="settings_link_course" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="settings_support_email" translatable="false">polin0chch@gmail.com</string>
    <string name="settings_subject">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="settings_message">Спасибо разработчикам за крутое приложение!</string>
    <string name="settings_link_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <string name="dont_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save_button_text">Сохранить</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="edit_playlist_button">Редактировать информацию</string>
    <string name="share_button">Поделиться</string>
    <string name="remove_track_question">Хотите удалить трек?</string>
    <string name="yes_option">Да</string>
    <string name="no_option">Нет</string>

    <plurals name="tracks">
        <item quantity="zero">Нет треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>