<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/header_padding_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/normal_padding_size"
            android:layout_marginTop="@dimen/ten_padding_size"
            android:layout_marginBottom="@dimen/normal_padding_size"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_white"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/big_padding_size"
        android:paddingBottom="@dimen/very_padding_size"
        android:paddingHorizontal="@dimen/small_padding_size"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/button_white"
            android:text="@string/text_search"
            android:textColor="@color/text_black"
            android:textSize="@dimen/medium_text_size"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/medium_padding_size"
            android:foreground="?attr/selectableItemBackground"

            app:icon="@drawable/icon_search"
            app:iconGravity="textStart"
            app:iconTint="@color/text_black"
            app:iconPadding="@dimen/icon_padding_size" />

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginVertical="@dimen/medium_padding_size"
            android:backgroundTint="@color/button_white"
            android:text="@string/text_media_library"
            android:textColor="@color/text_black"
            android:textSize="@dimen/medium_text_size"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/medium_padding_size"
            android:foreground="?attr/selectableItemBackground"

            app:icon="@drawable/icon_media"
            app:iconGravity="textStart"
            app:iconTint="@color/icon_black"
            app:iconPadding="@dimen/icon_padding_size"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/button_white"
            android:text="@string/text_settings"
            android:textColor="@color/text_black"
            android:textSize="@dimen/medium_text_size"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/medium_padding_size"
            android:foreground="?attr/selectableItemBackground"

            app:icon="@drawable/icon_settings"
            app:iconGravity="textStart"
            app:iconTint="@color/icon_black"
            app:iconPadding="@dimen/icon_padding_size"/>
    </LinearLayout>
</LinearLayout>