<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        style="@style/ButtonBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newPlaylist"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_4"
        android:paddingLeft="@dimen/size_12"
        android:paddingTop="@dimen/size_10"
        android:paddingBottom="@dimen/size_12"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toTopOf="@id/playlistImage"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playlistImage"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_0"
        android:layout_marginHorizontal="@dimen/size_24"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/playlist_img_add"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylist" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16"
        android:layout_marginTop="@dimen/size_32"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistName"
            style="@style/NameTrackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/size_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescription"
            style="@style/NameTrackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:paddingHorizontal="@dimen/size_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createPlaylist"
        style="@style/ButtonСreate"
        android:enabled="false"
        android:paddingVertical="13dp"
        android:text="@string/playlist_create"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>